--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
     "export": "next build && next export"
   },
   "dependencies": {
+    "@arco-design/web-react": "^2.43.1",
+    "antd": "^5.1.2",
+    "bootstrap": "^5.3.0-alpha1",
+    "bulma": "^0.9.4",
     "date-fns": "^2.28.0",
     "fs": "0.0.1-security",
     "gray-matter": "^4.0.3",
@@ -15,5 +19,10 @@
     "react-dom": "17.0.2",
     "remark": "^14.0.2",
     "remark-html": "^15.0.1"
+  },
+  "devDependencies": {
+    "@types/node": "18.11.18",
+    "@types/react": "18.0.26",
+    "typescript": "4.9.4"
   }
 }
