--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bootstrap": "^5.3.0-alpha1",
     "bulma": "^0.9.4",
     "date-fns": "^2.28.0",
+    "frappe-charts": "^1.6.2",
     "fs": "0.0.1-security",
     "gray-matter": "^4.0.3",
     "next": "latest",
